--- a/public_html/estudo_css/style.css
+++ b/public_html/estudo_css/style.css
@@ -1,13 +1,11 @@
-body{
-	background-color: #00BFFF;
+body {
+	background-color: #ff0000;
 }
 
 h2 {
-	color: #ffff00;
-
+	color: #ff00ff;
 }
 
 #diferente {
-	color: #0ff000;
-	
+	color: #000000;
 }
