--- a/public_html/layout1/style.css
+++ b/public_html/layout1/style.css
@@ -1,16 +1,16 @@
-/** 
-*Exemplo de layout
-*@author - Kevin Souza
+/**
+* Exemplo de layout
+* @author - Kevin Souza
 * Data 26/09/2018
 */
-*{
 
+*{
 	margin: 0px;
 	padding: 0px;
 }
+
 body{
 	font-family: sans-serif;
-
 }
 
 .Layout{
@@ -18,21 +18,21 @@ body{
 	padding-top: 200px;
 	background-attachment: fixed;
 	background-size: cover;
-	background-position: center; 
-
+	background-position: center;
 }
+
 .Layout p{
 	text-align: center;
-	color: #000BBB;
+	color: #e3e4e5;
 	font-size: 2.5em;
 }
-.DivTexto{
-	background-color: #ffff;
 
+.DivTexto{
+	background-color: #ffffff;
 }
 
 .Destaque{
-	padding: 150px 0px 150px 0px; /*box model */
+	padding: 150px 0px 150px 0px; /*box model*/
 	max-width: 1024px;
 	margin: 0 auto;
 }
